"""ARM cross compilation toolchains for bazel"""

module(
    name = "toolchains_riscv_gnu",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")

# DEV ONLY (not needed for release)
bazel_dep(name = "bazel_lib", version = "3.2.2", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)

riscv_toolchain = use_extension("@toolchains_riscv_gnu//:extensions.bzl", "riscv_toolchain", dev_dependency = True)
riscv_toolchain.riscv_none_elf()
use_repo(riscv_toolchain, "riscv_none_elf")

register_toolchains(
    "//test/toolchains:all",
    "@riscv_none_elf//toolchain:all",
    dev_dependency = True,
)
